--- a/concurrency/excercise_2/.vscode/launch.json
+++ b/concurrency/excercise_2/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": ["1000000", "8"],
+            "args": ["50000", "2"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
