--- a/seminars/seminar_3/.vscode/launch.json
+++ b/seminars/seminar_3/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": [],
+            "args": ["50000", "8"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
